--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,28 +1,29 @@
 on:
-   push:
-     branches: [ main ]
-   pull_request:
-     branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-   build:
+  build:
+    runs-on: ubuntu-latest
 
-     runs-on: ubuntu-latest
-
-     steps:
-     - uses: actions/checkout@v2
-     - name: Install Dependencies
-       run: npm install
+    steps:
+      - name: Install Dependencies
+        uses: actions/checkout@v3
+        run: npm install
        
-     - name: Build the site in the jekyll/builder container
-       run: |
-         docker run \
-         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-         jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
-         
-     - name: GitHub Pages
-       uses: crazy-max/ghaction-github-pages@v2.5.0
-       with:
-        build_dir: _site/
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the site in the jekyll/builder container
+        run: |
+          docker run \
+          -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
+          jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+
+              
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v4.0.0
+        with:
+          target_branch: gh-pages
+          build_dir: _site
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
