--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,8 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install Dependencies
+
+      - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Install Dependencies
         run: npm install
        
       - name: Build the site in the jekyll/builder container
