--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Build dependencies
+        run: npm install
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.170.0
         with:
